# compstrat

./: compstrat.cabal
Data/Comp/Multi/: Strategic.hs
Data/Comp/Multi/Strategy/: Classification.hs  Derive.hs
examples/: examples.hs
examples/Examples/Java/: examples.hs
